lunes 17 octubre agregamos

--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -51,3 +51,51 @@ header nav ul li
 	top: 50px;*/
 	margin: -110px 0px 0px 0px;
 }
+
+#seccion01 article
+{
+	text-align: center;
+}
+
+#seccion01 article img
+{
+	border: 5px solid rgba(150,150,150, 0.3);
+	margin: 15px 0px 0px 0px;
+}
+
+#seccion02 article
+{
+	display: inline-block;
+	vertical-align: top;
+	width: 32.7%;
+}
+
+#seccion02 
+{
+	margin: 0 auto;
+}
+
+.otraseccion,.unaseccion
+{
+	font-family: arial; /*tipo de letras*/
+	font-weight: bold;  /*negritas*/
+}
+.otraseccion
+{
+	font-size: 2.5em;	/*tamaño de letra
+}*/
+
+.unaseccion
+{
+	font-size: 4.5em;	/*tamaño de letra*/
+}
+
+.botonsito
+{
+	text-align: left;
+}
+
+
+
+
+
