--- a/usuarios/css/estilos.css
+++ b/usuarios/css/estilos.css
@@ -30,6 +30,12 @@ header nav ul li
 	display: inline-block;
 }
 
+#artAltaUsuarios
+{
+	display: none;
+	margin: 0 auto;
+	width: 250px;
+}
 #entradaUsuario
 {
 	margin: 0 auto;
