--- a/usuarios/css/estilos.css
+++ b/usuarios/css/estilos.css
@@ -1,42 +1,36 @@
 body
 {
-	margin:0 auto;
-	width: 1024px;
+	margin: 0 auto;
+	max-width: 1024px;
 }
-
-header
-{
+header{
 	margin-bottom: 80px;
 	text-align: center;
 }
-
-header img  /*logo*/
+header img /*logo*/
 {
 	float: right;
 	margin-top: -40px;
 	width: 100px;
 }
-
 header nav
 {
-	display: none;
+	display: none; 
 }
-
-
 header nav ul li
 {
 	margin-right: 10px;
 	display: inline-block;
 }
-
 #artAltaUsuarios
-{
+{	
 	display: none;
 	margin: 0 auto;
-	width: 250px;
+	width: 450px;
 }
 #entradaUsuario
 {
+
 	margin: 0 auto;
 	width: 350px;
 }
